--- a/annotation-processors/ap-demo-processors/pom.xml
+++ b/annotation-processors/ap-demo-processors/pom.xml
@@ -20,10 +20,16 @@
 
     <dependencies>
         <dependency>
-            <groupId>javaone-2012</groupId>
-            <artifactId>typedquery-demo-annotations</artifactId>
+            <groupId>tdc-2013</groupId>
+            <artifactId>annotation-processors-demo-annotations</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>4.2.3</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
