--- a/annotation-processors/ap-demo-processors/pom.xml
+++ b/annotation-processors/ap-demo-processors/pom.xml
@@ -25,10 +25,17 @@
             <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>fluent-hc</artifactId>
             <version>4.2.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.2</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
