--- a/annotation-processors/ap-demo-processors/pom.xml
+++ b/annotation-processors/ap-demo-processors/pom.xml
@@ -25,7 +25,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>[2.3.19,2.4)</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>fluent-hc</artifactId>
