--- a/annotation-processors/ap-demo-processors/pom.xml
+++ b/annotation-processors/ap-demo-processors/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>[2.3.19,2.4)</version>
+            <version>[2.3.19,2.4]</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
