--- a/annotation-processors/ap-demo-processors/pom.xml
+++ b/annotation-processors/ap-demo-processors/pom.xml
@@ -42,6 +42,11 @@
             <version>2.2.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>rhino</groupId>
+            <artifactId>js</artifactId>
+            <version>1.7R2</version>
+        </dependency>
     </dependencies>
 
     <build>
