--- a/annotation-processors/ap-demo-web/src/main/webapp/WEB-INF/web.xml
+++ b/annotation-processors/ap-demo-web/src/main/webapp/WEB-INF/web.xml
@@ -51,6 +51,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/index.xhtml</welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 </web-app>
